Starting to apply expiration rules. Partially complete, but issue with Character Names not showing.

--- a/src/5addConditionModal.css
+++ b/src/5addConditionModal.css
@@ -37,13 +37,7 @@
   flex-direction: row;
   gap: 15px;
   align-items: stretch;
-}
-
-.expiration-n-submit-button {
-  display: flex;
-  flex-direction: row;
-  gap: 15px;
-  align-items: flex-start;
+  width: 100%;
 }
 
   .selectable-item {
@@ -100,7 +94,8 @@
 .characters-checkbox-group {
   display: flex;
   flex-direction: column; /* Stack character names vertically */
-  gap: 3px;
+  gap: 8px;
+  margin-top: 10px;
 }
 
 .conditions-checkbox-group {
@@ -127,6 +122,7 @@
 
 .condition-expiration-selection {
   width: 100%;
+  max-width: 100%;  
   min-height: 48px;
   background-color: var(--condition-modal-section-background);
   border-radius: 8px;
@@ -134,18 +130,19 @@
   display: flex;
   align-items: center;
   padding-left: 10px;
-  gap: 8px;
+  gap: 5px;
+  box-sizing: border-box;
 }
 
 .condition-expiration-label {
   color: black;
   font-size: large;
   font-weight: bold;
-  margin-right: 12px;
+  margin-right: 5px;
 }
 
 .condition-expiration-dropdown {
-  padding: 6px 10px;
+  padding: 5px 5px;
   border-radius: 5px;
   border: 1px solid #ccc;
   font-size: 1rem;
@@ -155,7 +152,6 @@
   width: 100%;
   justify-content: right;
   align-items: center;
-  background-color: yellow;
 }
 
   .submit-button {
